--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="슈비멍">
+    <meta property="og:title" content="조은민">
     <meta property="og:description" content="하이브리드 마케터 인스타그램">
-    <meta property="og:image" content="슈비.jpeg">
+    <meta property="og:image" content="em_img.png">
     <script type="text/javascript" src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/free/sparta.js"></script>
-    <title>슈비멍 profile</title>
+    <title>조은민 profile</title>
     <style>
         body{
             background-color:  #4cb785;
@@ -20,7 +20,7 @@
 
             border : 2px solid white;
 
-            background-image: url("슈비.jpeg");
+            background-image: url("em_img.png");
             background-position: center;
             background-size: cover;
         }
@@ -73,7 +73,7 @@
 <body>
     <div class="wrap">
         <div class="profile"></div>
-        <h1 class="main">슈비멍</h1>
+        <h1 class="main">조은민</h1>
         <p class="sub">하이브리드 마케터</p>
         <a target="_blank" href="https://instagram.com/em_lifelog/">#민슐랭가이드</a>
         <a target="_blank" href="https://instagram.com/minipopa12/">#개인일상계정</a>
